--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -3,6 +3,7 @@ version: '3.3'
 services:
 
   maadi:
+    image: localhost:5000/maadi:0.1
     build:
       context: bahmni
       dockerfile: Dockerfile
