--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - .env
     environment:
       - BAHMNI_SERVER_MODE=$mode
+      - BAHMNI_ACTIVE_HOST=$bahmni_active_host
+      - BAHMNI_PASSIVE_HOST=$bahmni_passive_host
     command: "bash -e /start.sh ${mode} ${setup_replication}"
     restart: always
     ports:
