--- a/docker-compose.uat.yml
+++ b/docker-compose.uat.yml
@@ -2,8 +2,8 @@ version: "3.3"
 
 services:
 
-  maadi-uat:
-    image: localhost:5000/maadi:0.1
+  bahmni-uat:
+    image: localhost:5000/${image_name}:${image_version}
     hostname: ${hostname}-uat
     container_name: ${hostname}-uat-container
     tmpfs: /tmp
@@ -22,16 +22,16 @@ services:
       - "10443:443"
     volumes:
       - type: volume
-        source: maadi_mysql_data
+        source: bahmni_uat_mysql_data
         target: /var/lib/mysql
       - type: volume
-        source: maadi_pgsql_data
+        source: bahmni_uat_pgsql_data
         target: /var/lib/pgsql
       - type: bind
         source: ${bahmni_enc_file_path}
         target: ${bahmni_enc_file_path}
 
 volumes:
-  maadi_mysql_data:
-  maadi_pgsql_data:
+  bahmni_uat_mysql_data:
+  bahmni_uat_pgsql_data:
 
