Add extra config options to .env.template.

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+image_name=
+image_version=
 bahmni_enc_file_path=/etc/bahmni_enc
 hostname=
 mode=passive
@@ -7,4 +9,3 @@ setup_replication=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
 nestor_backup_dir=
-
