Take the installer url from a build arg.

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 image_name=
 image_version=
 impl_file_suffix=
+bahmni_installer_url=https://dl.bintray.com/bahmni/rpm/rpms/bahmni-installer-0.90-308.noarch.rpm
 bahmni_enc_file_path=/etc/bahmni_enc
 hostname=
 mode=passive
@@ -10,3 +11,4 @@ setup_replication=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
 nestor_backup_dir=
+
