--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -8,4 +8,5 @@ services:
       dockerfile: Dockerfile
       args:
         - impl_file_suffix=${impl_file_suffix}
+        - bahmni_installer_url=${bahmni_installer_url}
 
