--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,8 @@ image_name=
 image_version=
 impl_file_suffix=
 bahmni_installer_url=https://dl.bintray.com/bahmni/rpm/rpms/bahmni-installer-0.90-308.noarch.rpm
+bahmni_implementation_repo=
+bahmni_implementation_branch=
 bahmni_enc_file_path=/etc/bahmni_enc
 hostname=
 mode=passive
