--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ bahmni_installer_url=https://dl.bintray.com/bahmni/rpm/rpms/bahmni-installer-0.9
 bahmni_implementation_repo=
 bahmni_implementation_branch=
 bahmni_enc_file_path=/etc/bahmni_enc
+bahmni_enc_host_path=/opt/bahmni_enc
 hostname=
 mode=passive
 bahmni_active_host=
