Mount the bahmni_enc file from the bahmni_enc_host_path variable.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
         source: bahmni_bahmni_home
         target: /home/bahmni
       - type: bind
-        source: ${bahmni_enc_file_path}
+        source: ${bahmni_enc_host_path}
         target: ${bahmni_enc_file_path}
 
 volumes:
