--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,7 @@ hostname=
 mode=passive
 bahmni_active_host=
 bahmni_passive_host=
+bahmni_postgres_present=
 setup_replication=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
