--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - BAHMNI_SERVER_MODE=$mode
       - BAHMNI_SETUP_REPLICATION=$setup_replication
+      - BAHMNI_POSTGRES_PRESENT=$bahmni_postgres_present
       - BAHMNI_REPLICATION_USERNAME=$bahmni_replication_username
       - BAHMNI_REPLICATION_PASSWORD=$bahmni_replication_password
       - BAHMNI_ACTIVE_HOST=$bahmni_active_host
