--- a/docker-compose.uat.yml
+++ b/docker-compose.uat.yml
@@ -10,11 +10,15 @@ services:
     environment:
       - BAHMNI_SERVER_MODE=active
       - BAHMNI_SETUP_REPLICATION=no
+      - BAHMNI_POSTGRES_PRESENT=$bahmni_postgres_present
+      - BAHMNI_REPLICATION_USERNAME=$bahmni_replication_username
+      - BAHMNI_REPLICATION_PASSWORD=$bahmni_replication_password
       - BAHMNI_ACTIVE_HOST=localhost
       - BAHMNI_PASSIVE_HOST=
       - BAHMNI_ENC_FILE_PATH=$bahmni_enc_file_path
       - BAHMNI_BACKUP_PASSIVE=no
       - BAHMNI_BACKUP_NESTOR=no
+      - BAHMNI_NESTOR_BACKUP_DIR=$nestor_backup_dir
     command: "bash -e /start.sh active no"
     restart: always
     ports:
