Simplification of the bahmni docker build.

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 image_name=
 image_version=
-impl_file_suffix=
+bahmni_implementation_name=
+bahmni_timezone=
 bahmni_replication_username=replication-user
 bahmni_replication_password=
 bahmni_installer_url=https://dl.bintray.com/bahmni/rpm/rpms/bahmni-installer-0.90-308.noarch.rpm
