Add separate version for uat.

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 image_name=
 image_version=
+image_version_uat=
 bahmni_implementation_name=
 bahmni_timezone=
 bahmni_replication_username=replication-user
