--- a/docker-compose.uat.yml
+++ b/docker-compose.uat.yml
@@ -35,6 +35,10 @@ services:
       - type: bind
         source: ${bahmni_enc_host_path}
         target: ${bahmni_enc_file_path}
+      - type: bind
+        source: /etc/localtime
+        target: /etc/localtime
+        read_only: true
 
 volumes:
   bahmni_uat_mysql_data:
