The enc file is read-only.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - type: bind
         source: ${bahmni_enc_host_path}
         target: ${bahmni_enc_file_path}
+        read_only: true
       - type: bind
         source: /etc/localtime
         target: /etc/localtime
