--- a/docker-compose.active.yml
+++ b/docker-compose.active.yml
@@ -13,9 +13,9 @@ services:
       - target: 5432
         published: 5432 # PostgreSQL replication
       - target: 8050
-        published: 8050 # OpenMRS atomfeed
+        published: 8050 # OpenMRS service port
       - target: 8051
-        published: 8051 # OpenMRS atomfeed
+        published: 8051 # Bahmni reports service port
       - target: 8052
-        published: 8052 # OpenELIS atomfeed
+        published: 8052 # OpenELIS service port
 
