Make the addresses for the passive server and nestor configurable.

--- a/.env.template
+++ b/.env.template
@@ -18,5 +18,6 @@ bahmni_postgres_present=
 setup_replication=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
+nestor_host=
 nestor_backup_dir=
 
