Pass the rsync path for Nestor via a variable.

--- a/.env.template
+++ b/.env.template
@@ -18,6 +18,7 @@ bahmni_postgres_present=
 setup_replication=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
+bahmni_nestor_rsync_path=/bin/rsync
 nestor_host=
 nestor_backup_dir=
 
