--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - BAHMNI_BACKUP_PASSIVE=$bahmni_backup_passive
       - BAHMNI_BACKUP_NESTOR=$bahmni_backup_nestor
       - BAHMNI_NESTOR_HOST=$nestor_host
+      - BAHMNI_NESTOR_RSYNC_PATH=$bahmni_nestor_rsync_path
       - BAHMNI_NESTOR_BACKUP_DIR=$nestor_backup_dir
     command: ["/start.sh", "${mode}", "${setup_replication}"]
     restart: always
