Set the hostname to the bahmni impl name and add the mode to the container name.

--- a/docker-compose.uat.yml
+++ b/docker-compose.uat.yml
@@ -4,8 +4,8 @@ services:
 
   bahmni-uat:
     image: localhost:5000/${image_name}:${image_version_uat}
-    hostname: ${hostname}-uat
-    container_name: ${hostname}-uat-container
+    hostname: ${bahmni_implementation_name}-uat
+    container_name: ${bahmni_implementation_name}-uat-container
     tmpfs: /tmp
     environment:
       - BAHMNI_IMPL_NAME=${bahmni_implementation_name}
