Make the enabled bahmni features configurable in .env instead of keeping a collection of inventory files.

--- a/.env.template
+++ b/.env.template
@@ -8,12 +8,13 @@ bahmni_replication_password=
 bahmni_installer_url=https://dl.bintray.com/bahmni/rpm/rpms/bahmni-installer-0.90-308.noarch.rpm
 bahmni_implementation_repo=
 bahmni_implementation_branch=
+bahmni_openelis_enabled=
+bahmni_reports_enabled=
 bahmni_enc_file_path=/opt/bahmni_enc
 bahmni_enc_host_path=/opt/bahmni_enc
 mode=passive
 bahmni_active_host=
 bahmni_passive_host=
-bahmni_postgres_present=
 setup_replication=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
