Set the new skip_backups variable.

--- a/.env.template
+++ b/.env.template
@@ -16,6 +16,7 @@ mode=passive
 bahmni_active_host=
 bahmni_passive_host=
 setup_replication=no
+bahmni_skip_backups=no
 bahmni_backup_passive=no
 bahmni_backup_nestor=no
 bahmni_nestor_rsync_path=/bin/rsync
