password instruction for atomfeed user

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ bahmni_replication_username=replication-user
 bahmni_replication_password=
 bahmni_openmrs_username=admin
 bahmni_openmrs_password=
+# Password must: be at least 7 characters, contain only upper or lower case, numbers, must have at least one of the following characters (*, $, # ,!)
 bahmni_openelis_username=atomfeed
 bahmni_openelis_password=
 bahmni_reports_username=reports-user
